--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "ml5": "^0.6.1",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.1",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0"
   },
